# webpeel

./: .cursorrules  .dockerignore  .env.example  .gitignore  .mcp.json  .npmignore  AGENT-IMPLEMENTATION.md  AGENTS.md  BUILD_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.api  Dockerfile.mcp  Dockerfile.worker  Dockerfile.worker.dockerignore  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  LICENSE  OAUTH_IMPLEMENTATION.md  README.md  RESTRUCTURE-SPEC.md  SECURITY.md  SELF_HOST.md  VERIFY.sh  VISION.md  audit-extractors.mjs  audit-thin.mjs  competitor-analysis.md  final-test.js  llms-full.txt  llms.txt  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  promptfoo-redteam.yaml  render.yaml  (+5 more)
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question_support.yml
.github/workflows/: ci.yml  deploy-api.yml  deploy.yml  k3s-deploy.yml  keepalive.yml  publish.yml  pypi.yml  release.yml
.internal/: AGENTS.md  ANIMATION-SPEC.md  ARCHITECTURE.md  BENCHMARKS.md  BILLING-ARCHITECTURE.md  BUSINESS-PLAN.md  CODE-REVIEW.md  CONSOLIDATION.md  DELIVERABLES.md  DESIGN-SPEC.md  DISTRIBUTION-CHECKLIST.md  FINAL-SPEC.md  FIXES-APPLIED.md  GITHUB-SETUP.md  INFRASTRUCTURE.md  MARKET-RESEARCH.md  REBUILD-SPEC.md  RESTRUCTURE-SPEC.md  REVIEW-SUMMARY.md  SECURITY-AUDIT.md  SMITHERY-SUBMISSION.md  VERIFY.sh  VISION.md
.internal/docs-markdown/: endpoints.md  mcp.md  quickstart.md
.internal/skill-old/: SKILL.md
.well-known/: ai-plugin.json
benchmarks/: comparison-v2.md  comparison.md  results-firecrawl.json  results-rawfetch.json  results-tavily.json  results-v2-exa.json  results-v2-firecrawl.json  results-v2-linkup.json  results-v2-rawfetch.json  results-v2-tavily.json  results-v2-webpeel.json  results-v3-webpeel.json  results-v4-speed-2.json  results-v4-speed-before.json  results-v4-speed.json  results-webpeel.json  results.json  run.ts
dashboard/: REDESIGN_SUMMARY.md  next.config.ts  package-lock.json  package.json  vercel.json
dashboard/src/: middleware.ts
docs/: authentication.md  errors.md  landing.html  mcp.md  rate-limits.md
examples/curl/: extract.sh  fetch.sh  search.sh
examples/python/: basic_fetch.py  batch_fetch.py
examples/typescript/: basic-fetch.ts  crawl-site.ts  mcp-config.json  search-and-extract.ts
extension/: README.md  manifest-firefox.json  manifest.json
extension/background/: service-worker.js
extension/content/: content.js
extension/icons/: generate-icons.cjs  generate-icons.js
extension/popup/: popup.css  popup.html  popup.js
infra/research-worker/: deploy.sh  package-lock.json  package.json  server.js  webpeel-research.service
infra/searxng/: cloud-init.sh  deploy.sh  docker-compose.yml  settings.yml
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/ts/: index.ts
integrations/langchain/webpeel_langchain/: __init__.py  loader.py
integrations/llamaindex/: README.md  pyproject.toml
integrations/llamaindex/ts/: index.ts
integrations/llamaindex/webpeel_llamaindex/: __init__.py  reader.py
k8s/: OOM-RECOVERY.md  README.md  api-deployment.yaml  cleanup-cron.yaml  hpa.yaml  worker-deployment.yaml
migrations/: 003_oauth_accounts.sql  007_watch.sql  008_key_expiration.sql  009_alert_preferences.sql  010_key_scope.sql  011_shared_reads.sql  012_watch_webhook_secret.sql
peeltls/: SPEC.md  build.sh  fetch.go  fingerprints.go  go.mod  go.sum  h2chrome.go  main.go  proxy.go
python-sdk/: LICENSE  README.md  pyproject.toml
python-sdk/tests/: test_client.py
python-sdk/webpeel/: __init__.py  _version.py  client.py  exceptions.py  types.py
python-sdk/webpeel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: api-contract-test.sh  benchmark-engines.ts  benchmark-extended-results.json  benchmark-extended.mjs  benchmark-results.json  benchmark-stats.mjs  benchmark.ts  bundle-cli.js  cache-warm-smart.sh  cli-dx-test.sh  content-check.sh  design-review.sh  e2e-verify.sh  eval-fetch.ts  eval-smart-search.ts  firecrawl-compat-test.sh  fix-console.py  fix-search.py  hetzner-cleanup.sh  k8s-health-check.sh  mcp-parity-check.sh  postversion.sh  pre-publish-gate.sh  pre-publish.sh  redteam.sh  release.sh  render-deploy.sh  render-env-backup.sh  render-env-safe.sh  security-scan.sh  setup-hetzner-cron.sh  smoke-test.sh  test-extractors.sh  test-mcp-consolidation.sh  update-constants.sh  validate-db-schema.sh  verify-deploy.sh
sdks/python/: .gitignore  MANIFEST.in  README.md  pyproject.toml
sdks/python/webpeel/: __init__.py  types.py
site/: 404.html  acceptable-use.html  benchmarks.html  changelog.html  index.html  index.html.bak  llms-full.txt  llms.txt  methodology.html  migrate-from-firecrawl.html  playground.html  playground.html.bak  pricing.html  privacy.html  robots.txt  security.html  sitemap.xml  status.html  terms.html  vercel.json  webpeel-postman-collection.json  widget.js
site/blog/: benchmarks.html  best-mcp-web-fetcher.html  how-webpeel-works.html  index.html  reduce-llm-token-costs.html  web-scraping-for-ai-agents.html  webpeel-vs-competitors.html  webpeel-vs-firecrawl-vs-tavily-vs-exa.html  webpeel-vs-firecrawl.html
site/docs/: agents.html  api-reference.html  ask.html  authentication.html  batch.html  changelog.html  cli.html  crawl.html  deep-fetch.html  deep-research.html  domain-extractors.html  errors.html  extract.html  fetch.html  getting-started.html  index.html  mcp.html  migrate-from-firecrawl.html  monitoring.html  proxy.html  quick-answer.html  quickstart.html  readability.html  screenshot.html  screenshots.html  sdks.html  search.html  self-hosting.html  sessions-cookies.html  sessions.html  youtube.html
site/public/: llms-full.txt  widget.js
site/styles/: docs.css
skill/: SKILL.md
skills/webpeel/: SKILL.md
src/: cli-auth.ts  cli.ts  index.ts  types.ts
src/cli/: utils.ts
src/core/: actions.ts  agent.ts  answer.ts  apply.ts  auth-detection.ts  auto-extract.ts  cache.ts  (+69 more)
worker/: README.md  package.json  wrangler.toml
(+290 files in other folders)
