[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webpeel"
version = "0.1.0"
description = "Fast web fetcher for AI agents — smart extraction, stealth mode, structured data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Jake Liu", email = "jake@webpeel.dev"}
]
keywords = [
    "web-scraping",
    "ai",
    "llm",
    "mcp",
    "web-fetcher",
    "markdown",
    "scraper",
    "crawler",
    "ai-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://webpeel.dev"
Documentation = "https://github.com/JakeLiuMe/webpeel"
Repository = "https://github.com/JakeLiuMe/webpeel"
Issues = "https://github.com/JakeLiuMe/webpeel/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["webpeel*"]
exclude = ["tests*"]
