[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webpeel"
version = "0.12.0"
description = "Official Python SDK for the WebPeel web-scraping API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["web scraping", "crawling", "html", "markdown", "ai", "rag", "langchain", "llm", "mcp", "webpeel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "httpx>=0.24.0",
]

[project.urls]
Homepage       = "https://webpeel.dev"
Documentation  = "https://webpeel.dev/docs"
Repository     = "https://github.com/webpeel/webpeel"
"Bug Tracker"  = "https://github.com/webpeel/webpeel/issues"

[tool.hatch.build.targets.wheel]
packages = ["webpeel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
